--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <script>
         // 【重要】請在此處貼上你的 Google Apps Script Web App 網址
-        const SCRIPT_URL = "YOUR_GOOGLE_SCRIPT_URL"; 
+        const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzGEFsSI_WTXMlG1w9RWGppZEWw8cuYe2I2N_jEr9RLr_QNalzHdx7wQwp69XtpI0W9zA/exec"; 
 
         let tripData = [];
 
