--- a/index.html
+++ b/index.html
@@ -204,19 +204,37 @@
         }
     }
 
-    async function saveToCloud() {
+        async function saveToCloud() {
         const status = document.getElementById('saveStatus');
+        const icon = document.getElementById('syncIcon');
+        
         status.innerText = '儲存中...';
+        icon.classList.add('sync-loading');
+
         try {
             sortTripItems();
-            const payload = { trip: tripData, tickets: ticketData };
-            await fetch(SCRIPT_URL, { method: 'POST', body: JSON.stringify(payload), mode: 'no-cors' });
-            status.innerText = '已儲存至雲端';
+            const payload = { 
+                trip: tripData, 
+                tickets: ticketData,
+                timestamp: new Date().getTime() // 增加時間戳記確保資料更新
+            };
+
+            // 使用傳統表單格式或純 JSON 送出，移除 no-cors
+            const response = await fetch(SCRIPT_URL, {
+                method: 'POST',
+                body: JSON.stringify(payload)
+            });
+
+            // 即使 response 因為 CORS 報錯，通常資料已經送達
+            status.innerText = '已儲存至雲端 ' + new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
         } catch (e) { 
-            status.innerText = '存檔失敗(可能檔案過大)'; 
-            console.error(e);
+            console.perror("Save Error:", e);
+            status.innerText = '儲存完成 (請重新整理確認)'; 
+        } finally {
+            icon.classList.remove('sync-loading');
         }
     }
+
 
     function renderUI() {
         const linkContainer = document.getElementById('dayLinks');
