--- a/index.html
+++ b/index.html
@@ -204,36 +204,36 @@
         }
     }
 
-        async function saveToCloud() {
-        const status = document.getElementById('saveStatus');
-        const icon = document.getElementById('syncIcon');
-        
-        status.innerText = '儲存中...';
-        icon.classList.add('sync-loading');
+async function saveToCloud() {
+    const status = document.getElementById('saveStatus');
+    const icon = document.getElementById('syncIcon');
+    
+    status.innerText = '儲存中...';
+    icon.classList.add('sync-loading');
 
-        try {
-            sortTripItems();
-            const payload = { 
-                trip: tripData, 
-                tickets: ticketData,
-                timestamp: new Date().getTime() // 增加時間戳記確保資料更新
-            };
+    try {
+        sortTripItems();
+        const payload = { 
+            trip: tripData, 
+            tickets: ticketData
+        };
 
-            // 使用傳統表單格式或純 JSON 送出，移除 no-cors
-            const response = await fetch(SCRIPT_URL, {
-                method: 'POST',
-                body: JSON.stringify(payload)
-            });
+        await fetch(SCRIPT_URL, {
+            method: 'POST',
+            mode: 'no-cors', // 關鍵：避免瀏覽器安全性攔截
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(payload)
+        });
 
-            // 即使 response 因為 CORS 報錯，通常資料已經送達
-            status.innerText = '已儲存至雲端 ' + new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
-        } catch (e) { 
-            console.perror("Save Error:", e);
-            status.innerText = '儲存完成 (請重新整理確認)'; 
-        } finally {
-            icon.classList.remove('sync-loading');
-        }
+        // 因為 no-cors 模式下無法讀取 response，我們假設發送成功
+        status.innerText = '已儲存至雲端 ' + new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
+    } catch (e) { 
+        console.error("Save Error:", e);
+        status.innerText = '儲存失敗'; 
+    } finally {
+        icon.classList.remove('sync-loading');
     }
+}
 
 
     function renderUI() {
