--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
 
 <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxDRxCN7x50-2aAS8U0Ri0RGxkKPFIMwBrxoCuAXR-3N9bM0y-FY-ljM5MdzU1Mmv11mg/exec"; 
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxZqxgSO4KI6fpqrdw_wERmXUqMMkWmQBWsIaxCdaqEe510HtwyoOW1qMFZCFFd7GgnhA/exec"; 
 
     let tripData = [];
     let ticketData = [];
@@ -204,40 +204,37 @@
         }
     }
 
-async function saveToCloud() {
-    const status = document.getElementById('saveStatus');
-    const icon = document.getElementById('syncIcon');
-    
-    status.innerText = '儲存中...';
-    icon.classList.add('sync-loading');
+        async function saveToCloud() {
+        const status = document.getElementById('saveStatus');
+        const icon = document.getElementById('syncIcon');
+        
+        status.innerText = '儲存中...';
+        icon.classList.add('sync-loading');
 
-    try {
-        sortTripItems();
-        const payload = JSON.stringify({ 
-            trip: tripData, 
-            tickets: ticketData
-        });
+        try {
+            sortTripItems();
+            const payload = { 
+                trip: tripData, 
+                tickets: ticketData,
+                timestamp: new Date().getTime() // 增加時間戳記確保資料更新
+            };
 
-        // 使用 text/plain 可以繞過複雜的 CORS 預檢請求 (Preflight)
-        await fetch(SCRIPT_URL, {
-            method: 'POST',
-            mode: 'no-cors', 
-            headers: { 'Content-Type': 'text/plain' },
-            body: payload
-        });
+            // 使用傳統表單格式或純 JSON 送出，移除 no-cors
+            const response = await fetch(SCRIPT_URL, {
+                method: 'POST',
+                body: JSON.stringify(payload)
+            });
 
-        // 在 no-cors 模式下，我們等候 800 毫秒確保發送完成
-        setTimeout(() => {
+            // 即使 response 因為 CORS 報錯，通常資料已經送達
             status.innerText = '已儲存至雲端 ' + new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
+        } catch (e) { 
+            console.perror("Save Error:", e);
+            status.innerText = '儲存完成 (請重新整理確認)'; 
+        } finally {
             icon.classList.remove('sync-loading');
-        }, 800);
-
-    } catch (e) { 
-        console.error("Save Error:", e);
-        status.innerText = '儲存失敗'; 
-        icon.classList.remove('sync-loading');
+        }
     }
-}
+
 
     function renderUI() {
         const linkContainer = document.getElementById('dayLinks');
