--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
 
 <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwgSgf1KP6RtVWUmoFS0lz42ND3ppHUYa6fZvt7RYTPL2khFkue4pfs0-ti7DCH68v5_w/exec"; 
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxZqxgSO4KI6fpqrdw_wERmXUqMMkWmQBWsIaxCdaqEe510HtwyoOW1qMFZCFFd7GgnhA/exec"; 
 
     let tripData = [];
     let ticketData = [];
@@ -204,36 +204,36 @@
         }
     }
 
-async function saveToCloud() {
-    const status = document.getElementById('saveStatus');
-    const icon = document.getElementById('syncIcon');
-    
-    status.innerText = '儲存中...';
-    icon.classList.add('sync-loading');
+        async function saveToCloud() {
+        const status = document.getElementById('saveStatus');
+        const icon = document.getElementById('syncIcon');
+        
+        status.innerText = '儲存中...';
+        icon.classList.add('sync-loading');
 
-    try {
-        sortTripItems();
-        const payload = { 
-            trip: tripData, 
-            tickets: ticketData // 這裏包含了壓縮後的 Base64 票券圖片
-        };
+        try {
+            sortTripItems();
+            const payload = { 
+                trip: tripData, 
+                tickets: ticketData,
+                timestamp: new Date().getTime() // 增加時間戳記確保資料更新
+            };
 
-        // 使用 POST 送出資料
-        await fetch(SCRIPT_URL, {
-            method: 'POST',
-            mode: 'no-cors', // 解決跨網域存取問題
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(payload)
-        });
+            // 使用傳統表單格式或純 JSON 送出，移除 no-cors
+            const response = await fetch(SCRIPT_URL, {
+                method: 'POST',
+                body: JSON.stringify(payload)
+            });
 
-        status.innerText = '已儲存至雲端 ' + new Date().toLocaleTimeString();
-    } catch (e) { 
-        console.error("Save Error:", e);
-        status.innerText = '儲存失敗'; 
-    } finally {
-        icon.classList.remove('sync-loading');
+            // 即使 response 因為 CORS 報錯，通常資料已經送達
+            status.innerText = '已儲存至雲端 ' + new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
+        } catch (e) { 
+            console.perror("Save Error:", e);
+            status.innerText = '儲存完成 (請重新整理確認)'; 
+        } finally {
+            icon.classList.remove('sync-loading');
+        }
     }
-}
 
 
     function renderUI() {
